[main-site-frontend] Fix horizontal overflow problem on windows

--- a/main-site-frontend/src/index.css
+++ b/main-site-frontend/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: #f7f7f7;
   color: #38484f;
+  overflow-x: hidden;
 }
 
 html {
